2010-12-23 Thu  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-cmd-upgrade-all-packages): Delay
	`epackage--install-action-list' action "boot" until end.

2010-12-22 Wed  Jari Aalto  <jari.aalto@cante.net>

	* README (Project details, References): Add ripdoc, t2html.

	* Makefile (clean, install): adjust documentation strings.

	* epackage.el
	(top level): Don't require autorevert.el, forward declare its
	variables. Add autoload for `mail-setup'.
	(epackage-turn-on-auto-revert-mode): Check
	variables with `boundp'.
	(epackage-depends-parse-string): Correct variable name.
	(epackage-git-status-data): Correct variable name.
	(epackage-combine-files): Adjust message.
	(epackage-pkg-depends-verify-emacs): Add `version' to let.
	(epackage-pkg-depends-satisfy): Correct input args.
	(epackage-config-delete-file): Add arg `verbose'.
	(epackage-config-delete-action): Pass `verbose' forward.
	(epackage-pkg-lint-directory): Correct variable.
	(epackage-cmd-upgrade-package): Add missing arg for `message'.
	(epackage-pkg-lint-downloaded-git-url): Correct function call.
	(epackage-cmd-download-action-lint-on): Correct function call.
	(epackage-batch-ui-display-package-documentation): Correct
	function call.
	(epackage--loader-file-name): Rename. Was
	`epackage--loader-file-boot'.
	(epackage--loader-file-byte-compile-flag): Rename. Was
	`epackage--loader-file-boot-byte-compile-flag'.
	(epackage--sources-list-and-repository-sync-flag): New.
	(epackage-byte-compile-default-maybe): Remove. Unused.
	(epackage-kill-buffer-sources-list): New.
	(epackage-cmd-download-sources-list): Call
	`epackage-kill-buffer-sources-list'.
	(epackage-with-sources-list): Add `epackage-turn-on-auto-revert-mode'.
	(epackage-kill-buffer-list): New.
	(epackage--install-action-list): New.
	(epackage-batch-ui-menu): Use `epackage--install-action-list'.
	(epackage-download-action-install-p): New.
	(epackage-download-action-activate-p): New.
	(epackage-download-action-enable-p): New.